--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         tools:targetApi="31">
         <activity
 
-            android:name=".view.LoginActivity"
+            android:name=".view.login.LoginActivity"
 
             android:exported="false" />
         <activity
