--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
