--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,20 +16,29 @@
         android:theme="@style/Theme.ENSAKConnect"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-        <!--<activity
+        <activity
+            android:name=".view.ResetPassword.CodeValidationScreen"
+            android:exported="false" />
+        <activity
+            android:name=".view.ResetPassword.EmailRecuperation"
+            android:exported="false" />
+        <activity
+            android:name=".view.ResetPassword.ResetPasswordScreen"
+            android:exported="false" />
+
+        <!--
+        <activity
 
             android:name=".MainActivity"
-            android:exported="false" />-->
+            android:exported="false" />
+        -->
         <activity
-            android:name=".view.home.HomeActivity"
+            android:name=".view.Registration.RegistrationScreen"
+            android:exported="true" />
+        <activity
+            android:name=".view.login.LoginActivity"
             android:exported="true"
- />
-        <activity
-
-            android:name=".view.RegistrationScreen"
             android:label="@string/app_name"
-            android:exported="true"
-
             android:theme="@style/Theme.ENSAKConnect.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
