--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -17,6 +17,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
+        <activity
+            android:name=".view.Profile.ProfileActivity"
+            android:exported="false" />
         <activity
             android:name=".view.ResetPassword.CodeValidationScreen"
             android:exported="false" />
@@ -45,7 +48,7 @@
             android:name=".view.loading_screen.LoadingActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ENSAKConnect.NoActionBar">
+            android:theme="@style/Theme.ENSAKConnect.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
