--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
 
+    // Logging for Retrofit
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+
+    //Splash Api
+    implementation "androidx.core:core-splashscreen:1.0.1"
 }
