wip: screen for creating new question

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".view.create_question_screen.CreateQuestionActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.ResetPassword.CodeValidationScreen"
             android:exported="false" />
         <activity
@@ -25,7 +28,6 @@
         <activity
             android:name=".view.ResetPassword.ResetPasswordScreen"
             android:exported="false" />
-
         <!--
         <activity
 
@@ -35,11 +37,9 @@
         <activity
             android:name=".view.Registration.RegistrationScreen"
             android:exported="true" />
-        
         <activity
             android:name=".view.login.LoginActivity"
             android:exported="false" />
-
         <activity
             android:name=".view.home.HomeActivity"
             android:exported="true" />
