Start working on comments screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,17 +17,19 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".view.home.HomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.RegistrationScreen"
             android:exported="false" />
         <activity
             android:name=".view.login.LoginActivity"
             android:exported="false" />
-
         <activity
             android:name=".view.loading_screen.LoadingActivity"
             android:exported="true" />
         <activity
-            android:name=".view.home.HomeActivity"
+            android:name=".view.comments.CommentsActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ENSAKConnect.NoActionBar">
