--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         tools:targetApi="31">
         <activity
             android:name=".view.conversations.ConversationsActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.ENSAKConnect.NoActionBar" />
         <activity
             android:name=".view.ResetPassword.CodeValidationScreen"
             android:exported="false" />
