feat: finished UI for create question post

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,10 @@
             android:name=".view.login.LoginActivity"
             android:exported="false" />
         <activity
+            android:name=".view.create_question_screen.CreateQuestionActivity"
+            android:exported="false"
+            android:theme="@style/Theme.ENSAKConnect.NoActionBar" />
+        <activity
             android:name=".view.home.HomeActivity"
             android:exported="true"
             android:theme="@style/Theme.ENSAKConnect.NoActionBar" />
