--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
             android:theme="@style/Theme.ENSAKConnect.NoActionBar" />
         <activity
             android:name=".view.Profile.ProfileActivity"
-            android:exported="false" />
+            android:theme="@style/ProfileActivityTheme"
+        android:exported="false" />
         <activity
             android:name=".view.conversations.ConversationsActivity"
             android:exported="false"
