refact: change register screen ui to use theme styles

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,8 @@
             android:theme="@style/Theme.ENSAKConnect.NoActionBar" />
         <activity
             android:name=".view.Registration.RegistrationScreen"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.ENSAKConnect.NoActionBar" />
         <activity
             android:name=".view.login.LoginActivity"
             android:exported="false"
