--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,24 +17,26 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".view.create_jobpost_screen.CreateJobPostActivity"
+            android:exported="false"
+            android:theme="@style/Theme.ENSAKConnect.NoActionBar"
+            android:windowSoftInputMode="adjustPan"/>
+        <activity
             android:name=".view.Profile.ModifyProfileExperience"
             android:exported="false"
-            android:windowSoftInputMode="adjustPan"
             android:theme="@style/Theme.ENSAKConnect.NoActionBar"
-            />
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".view.Profile.ModifyProfileEducation"
             android:exported="false"
-            android:windowSoftInputMode="adjustPan"
-            android:theme="@style/Theme.ENSAKConnect.NoActionBar"/>
+            android:theme="@style/Theme.ENSAKConnect.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
         <activity
-
             android:name=".view.Settigns.SettingsActivity"
             android:exported="false"
             android:label="@string/title_activity_settings"
-            android:theme="@style/Theme.ENSAKConnect.NoActionBar"/>
+            android:theme="@style/Theme.ENSAKConnect.NoActionBar" />
         <activity
-
             android:name=".view.notifications.NotificationActivity"
             android:exported="false"
             android:theme="@style/Theme.ENSAKConnect.NoActionBar" />
@@ -70,7 +72,7 @@
         <activity
             android:name=".view.login.LoginActivity"
             android:exported="false"
-            android:theme="@style/Theme.ENSAKConnect.NoActionBar"/>
+            android:theme="@style/Theme.ENSAKConnect.NoActionBar" />
         <activity
             android:name=".view.create_question_screen.CreateQuestionActivity"
             android:exported="false"
