--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -55,4 +56,7 @@ dependencies {
 
     // Logging for Retrofit
     implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
+
+    implementation "com.google.dagger:hilt-android:2.44"
+    annotationProcessor "com.google.dagger:hilt-compiler:2.44"
 }
