--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
             android:exported="false"
             android:theme="@style/Theme.ENSAKConnect.NoActionBar" />
         <activity
-            android:name=".presentation.auth.password_reset.PasswordResetVerificationActivity"
+            android:name=".presentation.auth.password_reset.CodeValidationActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.auth.password_reset.PasswordResetActivity"
