--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.profile.ProfileEditActivity"
-            android:theme="@style/Theme.ENSAKConnect.NoActionBar"
+            android:name=".presentation.question_post.show.ShowQuestionPost"
             android:exported="false" />
+        <activity
+            android:name=".presentation.profile.ProfileEditActivity"
+            android:exported="false"
+            android:theme="@style/Theme.ENSAKConnect.NoActionBar" />
         <activity
             android:name=".presentation.profile.SkillsEditActivity"
             android:exported="false"
