--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.question_post.show.ShowQuestionPost"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.ENSAKConnect.NoActionBar" />
         <activity
             android:name=".presentation.profile.ProfileEditActivity"
             android:exported="false"
