--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'com.google.dagger.hilt.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -56,6 +57,12 @@ dependencies {
 
     // Logging for Retrofit
     implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
+
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:32.7.0')
+
+    // OneSignal
+    implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
 
     implementation "com.google.dagger:hilt-android:2.44"
     annotationProcessor "com.google.dagger:hilt-compiler:2.44"
