--- a/build.gradle
+++ b/build.gradle
@@ -2,4 +2,5 @@
 plugins {
     id 'com.android.application' version '8.1.0' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
+    id 'com.google.gms.google-services' version '4.4.0' apply false
 }
