--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.chat.conversation.AddConversationActivity"
+            android:exported="false"
+            android:theme="@style/Theme.ENSAKConnect.NoActionBar" />
+        <activity
             android:name=".presentation.question_post.show.ShowQuestionPost"
             android:exported="false"
             android:theme="@style/Theme.ENSAKConnect.NoActionBar" />
@@ -25,11 +29,10 @@
             android:name=".presentation.profile.ProfileEditActivity"
             android:exported="false"
             android:theme="@style/Theme.ENSAKConnect.NoActionBar" />
-
         <activity
             android:name=".presentation.profile.CertificateActivity"
             android:exported="false"
-            android:theme="@style/Theme.ENSAKConnect.NoActionBar"/>
+            android:theme="@style/Theme.ENSAKConnect.NoActionBar" />
         <activity
             android:name=".presentation.profile.SkillsEditActivity"
             android:exported="false"
