--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.job_post.JobApplicationsActivity"
+            android:exported="false"
+            android:theme="@style/Theme.ENSAKConnect.NoActionBar" />
+        <activity
             android:name=".presentation.home.UserPostActivity"
             android:exported="false"
-            android:theme="@style/Theme.ENSAKConnect.NoActionBar"/>
+            android:theme="@style/Theme.ENSAKConnect.NoActionBar" />
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
